# voiceover-pipeline

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: README.md  agent-cli-contract.md  artifacts-and-analysis.md  openrouter-gemini-tts.md  openrouter-tts-models.md  polza-openai-audio-models.md  polza-tts-models.md  qwen-local-tts.md  remotion-workflow.md  troubleshooting.md  whisper-timing.md
docs/skills/voiceover-pipeline/: SKILL.md
docs/skills/voiceover-pipeline/docs/: 00-version-log.md  01-concept.md  02-install.md  03-security-and-secrets.md  04-input-format.md  05-providers-and-models.md  06-commands-and-flags.md  07-artifacts.md  08-workflows.md  09-troubleshooting.md  10-evaluation.md  11-gemini-prompting.md  12-gemini-prompting-templates.md
docs/skills/voiceover-pipeline/examples/: env-example.md  minimal-script.md  remotion-agent-flow.md
in/: clone_test.txt  podcast_script_raw.txt
scripts/: poc_openrouter_gemini_multispeaker.py  release.ps1
src/voiceover_pipeline/: __init__.py  artifacts.py  cli.py  config.py  gemini_dialogue.py  media.py  models.py  pricing.py  retry.py  run_state.py  script_splitter.py  tts_prompting.py  voiceover_script.py  whisper_timing.py
src/voiceover_pipeline/providers/: __init__.py  base.py  openrouter_tts.py  polza_chat_audio.py  polza_tts.py  qwen_local.py
tests/: conftest.py  test_cli_json_contract.py  test_cli_output_policy.py  test_cli_validation.py  test_generation_stability.py  test_new_providers.py
tests/fixtures/: smoke_test.md
