[project]
name = "voiceover-pipeline"
version = "0.3.0"
description = "Standalone chunked TTS voiceover + Whisper timing CLI"
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
  {name = "Vladimir Monin", email = "moninvladimir88@gmail.com"},
]
keywords = [
  "tts",
  "text-to-speech",
  "voiceover",
  "whisper",
  "remotion",
  "podcast",
  "audio",
  "subtitles",
  "srt",
  "cli",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
  "openai>=2.32.0",
  "requests>=2.33.0",
]

[project.optional-dependencies]
timing-whisper = [
  "faster-whisper>=1.0.0",
  "ctranslate2>=4.6.2",
]
voiceover-qwen = [
  "torch>=2.0.0",
  "qwen-tts>=0.1.0",
  "soundfile>=0.12.0",
  "numpy>=1.24.0",
]
cuda = [
  "nvidia-cudnn-cu12>=9.0.0; sys_platform == 'win32' or sys_platform == 'linux'",
  "nvidia-cublas-cu12>=12.0.0; sys_platform == 'win32' or sys_platform == 'linux'",
]

[project.urls]
Homepage = "https://github.com/VladimirMonin/voiceover-pipeline"
Repository = "https://github.com/VladimirMonin/voiceover-pipeline"
Issues = "https://github.com/VladimirMonin/voiceover-pipeline/issues"

[project.scripts]
voiceover = "voiceover_pipeline.cli:main"
voiceover-pipeline = "voiceover_pipeline.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/voiceover_pipeline"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/in",
  "/docs",
  "/out",
  "/pyproject.toml",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/uv.lock",
  "/.gitignore",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
